opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_js"
bug-reports: "https://github.com/janestreet/async_js/issues"
dev-repo: "https://github.com/janestreet/async_js.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "async_js" "--root" "." "-j" jobs]
]
depends: [
  "async_kernel"
  "async_rpc_kernel"
  "jbuilder"
  "ppx_driver"
  "ppx_jane"
  "js_of_ocaml"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
A small library that provide Async support for JavaScript platforms.
"
