opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_js"
bug-reports: "https://github.com/janestreet/async_js/issues"
dev-repo: "git+https://github.com/janestreet/async_js.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_js/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async_kernel"
  "async_rpc_kernel"
  "core"
  "ppx_expect"
  "ppx_jane"
  "dune"             {>= "3.17.0"}
  "js_of_ocaml"      {= "6.0.1+ox"}
  "js_of_ocaml-ppx"  {= "6.0.1+ox"}
  "uri"              {>= "3.0.0"}
  "uri-sexp"         {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A small library that provide Async support for JavaScript platforms"
description: "
"
