(library
 (name rpc_server)
 (libraries async async_js_test_lib cohttp-async cohttp_jane cohttp_jane_krb
   cohttp_static_handler core krb_http rpc_websocket_jane uri web_testing
   yojson)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps %{bin:ocaml-embed-file} ../client/main.bc.js)
 (action
  (bash "%{deps} -output embedded_files")))
